force-app/main/default/objects/Sales_Rep_Commision__c/Sales_Rep_Commision__c.object-meta.xml
<CustomObject>
    <label>Reps Commission</label>
    <nameField>
        <label>Sales Rep Commision Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reps Commissions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>