force-app/main/default/objects/Sales_Rep_Commision__c/fields/Client_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Client_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Cancelled</label>
    <type>Checkbox</type>
</CustomField>