force-app/main/default/objects/Sales_Rep_Commision__c/fields/Commission_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>Commission_Per_Week__c</fullName>
    <formula>IF(
  of_r__c &gt; 0,
  IF(
    X2__c,
    (Enrolled_Debt__c * 0.02) / of_r__c,
    (Enrolled_Debt__c * 0.01) /of_r__c
  ),
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Per Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>