force-app/main/default/objects/Sales_Rep_Commision__c/fields/Enrolled_Debt__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Debt__c</fullName>
    <formula>Opportunity_Name__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrolled Debt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>