force-app/main/default/objects/Sales_Rep_Commision__c/fields/First_Draft_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Draft_Date__c</fullName>
    <formula>Opportunity_Name__r.First_Draft_Date__c</formula>
    <label>First Draft Date</label>
    <type>Date</type>
</CustomField>