force-app/main/default/objects/Sales_Rep_Commision__c/fields/Frozen_Total_Commissions__c.field-meta.xml
<CustomField>
    <fullName>Frozen_Total_Commissions__c</fullName>
    <label>Frozen Total Commissions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>