force-app/main/default/objects/Sales_Rep_Commision__c/fields/of_r__c.field-meta.xml
<CustomField>
    <fullName>of_r__c</fullName>
    <label># of Program Fee Weeks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>