force-app/main/default/objects/Sales_Rep_Commision__c/fields/of_weeks__c.field-meta.xml
<CustomField>
    <fullName>of_weeks__c</fullName>
    <formula>Opportunity_Name__r.Number_of_Weeks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of weeks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>