force-app/main/default/objects/Sales_Rep_Commision__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Reps Commissions</relationshipLabel>
    <relationshipName>Reps_Commissions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>