force-app/main/default/objects/Sales_Rep_Commision__c/fields/Pause_Commission__c.field-meta.xml
<CustomField>
    <fullName>Pause_Commission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pause Commission?</label>
    <type>Checkbox</type>
</CustomField>