force-app/main/default/objects/Sales_Rep_Commision__c/fields/Pause_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Pause_Start_Date__c</fullName>
    <inlineHelpText>Stores the date the pause starts</inlineHelpText>
    <label>Pause Start Date</label>
    <type>Date</type>
</CustomField>