force-app/main/default/objects/Sales_Rep_Commision__c/fields/Skipped_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Skipped_Weeks__c</fullName>
    <label>Skipped Weeks</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>