force-app/main/default/objects/Sales_Rep_Commision__c/fields/Total_commissions__c.field-meta.xml
<CustomField>
    <fullName>Total_commissions__c</fullName>
    <formula>IF(
    Client_Cancelled__c,
    Frozen_Total_Commissions__c,
    Commission_Per_Week__c * (Weeks_past__c - Skipped_Weeks__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total commissions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>