force-app/main/default/objects/Sales_Rep_Commision__c/fields/Weeks_past__c.field-meta.xml
<CustomField>
    <fullName>Weeks_past__c</fullName>
    <formula>IF(
  ISBLANK(Opportunity_Name__r.First_Draft_Date__c),
  0,
  MIN(
    FLOOR((TODAY() - Opportunity_Name__r.First_Draft_Date__c) / 7),
    of_r__c
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weeks past</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>