force-app/main/default/objects/Sales_Rep_Commision__c/fields/X2__c.field-meta.xml
<CustomField>
    <fullName>X2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2%</label>
    <type>Checkbox</type>
</CustomField>