force-app/main/default/objects/Sales_Rep_Commision__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>of_r__c</columns>
    <columns>Weeks_past__c</columns>
    <columns>X2__c</columns>
    <columns>Skipped_Weeks__c</columns>
    <columns>Reason__c</columns>
    <columns>Total_commissions__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>